--- a/style.css
+++ b/style.css
@@ -9,3 +9,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: west-norwood-feast-astra-child
 Template: astra
 */
+
+pant
+pants
